namespace _67Bet.Betting.Domain.Enums;

public enum AchievementType
{
    TotalBets,
    HighOdds,
    TotalWinnings,
    LoginStreak
}
